--- a/index.html
+++ b/index.html
@@ -294,11 +294,12 @@
         .code-card-content {
             padding: 2rem;
             font-family: 'SF Mono', 'Monaco', 'Menlo', monospace;
-            font-size: 0.9rem;
-            line-height: 1.7;
+            font-size: 0.85rem;
+            line-height: 1.6;
             color: var(--text-secondary);
-            white-space: pre;
-            overflow-x: auto;
+            white-space: pre-wrap;
+            word-break: break-all;
+            overflow: hidden;
         }
 
         .code-block {
@@ -316,9 +317,11 @@
 
         .typing-code {
             color: #d4d4d4;
-            white-space: pre;
-            overflow-x: auto;
+            white-space: pre-wrap;
+            word-break: break-all;
+            overflow: hidden;
             line-height: 1.6;
+            font-size: 0.85rem;
         }
 
         /* PHP 语法高亮 */
@@ -553,7 +556,10 @@
 <span class="php-bracket">]</span><span class="php-operator">;</span>
 
 <span class="php-comment">// 创建队列实例</span>
-<span class="php-variable">$queue</span> <span class="php-operator">=</span> <span class="php-class">RedisStreamQueue</span><span class="php-operator">::</span><span class="php-method">getInstance</span><span class="php-bracket">(</span><span class="php-variable">$redisConfig</span><span class="php-operator">,</span> <span class="php-variable">$queueConfig</span><span class="php-operator">,</span> <span class="php-variable">$logger</span><span class="php-bracket">)</span><span class="php-operator">;</span>
+<span class="php-variable">$queue</span> <span class="php-operator">=</span> <span class="php-class">RedisStreamQueue</span><span class="php-operator">::</span><span class="php-method">getInstance</span><span class="php-bracket">(</span>
+    <span class="php-variable">$redisConfig</span><span class="php-operator">,</span> <span class="php-variable">$queueConfig</span><span class="php-operator">,</span> 
+    <span class="php-variable">$logger</span>
+<span class="php-bracket">)</span><span class="php-operator">;</span>
 
 <span class="php-comment">// 发送消息</span>
 <span class="php-variable">$messageId</span> <span class="php-operator">=</span> <span class="php-variable">$queue</span><span class="php-operator">-></span><span class="php-method">send</span><span class="php-bracket">(</span><span class="php-bracket">[</span>
@@ -571,7 +577,8 @@
 
 <span class="php-comment">// 消费消息</span>
 <span class="php-variable">$message</span> <span class="php-operator">=</span> <span class="php-variable">$consumer</span><span class="php-operator">-></span><span class="php-method">consume</span><span class="php-bracket">(</span><span class="php-keyword">function</span><span class="php-bracket">(</span><span class="php-variable">$message</span><span class="php-bracket">)</span> <span class="php-bracket">{</span>
-    <span class="php-echo">echo</span> <span class="php-string">"Processing: "</span> <span class="php-operator">.</span> <span class="php-variable">$message</span><span class="php-bracket">[</span><span class="php-string">'type'</span><span class="php-bracket">]</span> <span class="php-operator">.</span> <span class="php-string">"\\n"</span><span class="php-operator">;</span>
+    <span class="php-echo">echo</span> <span class="php-string">"Processing: "</span> <span class="php-operator">.</span> 
+        <span class="php-variable">$message</span><span class="php-bracket">[</span><span class="php-string">'type'</span><span class="php-bracket">]</span> <span class="php-operator">.</span> <span class="php-string">"\\n"</span><span class="php-operator">;</span>
     
     <span class="php-comment">// 业务逻辑处理</span>
     <span class="php-comment">// ...</span>
@@ -580,7 +587,8 @@
 <span class="php-bracket">}</span><span class="php-bracket">)</span><span class="php-operator">;</span>
 
 <span class="php-keyword">if</span> <span class="php-bracket">(</span><span class="php-variable">$message</span><span class="php-bracket">)</span> <span class="php-bracket">{</span>
-    <span class="php-echo">echo</span> <span class="php-string">"Message processed: "</span> <span class="php-operator">.</span> <span class="php-variable">$message</span><span class="php-bracket">[</span><span class="php-string">'id'</span><span class="php-bracket">]</span> <span class="php-operator">.</span> <span class="php-string">"\\n"</span><span class="php-operator">;</span>
+    <span class="php-echo">echo</span> <span class="php-string">"Message processed: "</span> <span class="php-operator">.</span> 
+        <span class="php-variable">$message</span><span class="php-bracket">[</span><span class="php-string">'id'</span><span class="php-bracket">]</span> <span class="php-operator">.</span> <span class="php-string">"\\n"</span><span class="php-operator">;</span>
 <span class="php-bracket">}</span></div></div>
                 </div>
             </div>
