--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             --primary-color: #2563eb;
             --secondary-color: #3b82f6;
             --accent-color: #10b981;
-            --dark-bg: #f8fafc;
+            --dark-bg: #e2e8f0;
             --card-bg: #ffffff;
-            --border-color: #e2e8f0;
-            --text-primary: #1e293b;
-            --text-secondary: #64748b;
+            --border-color: #cbd5e1;
+            --text-primary: #0f172a;
+            --text-secondary: #475569;
             --success-color: #10b981;
-            --code-bg: #f1f5f9;
+            --code-bg: #f8fafc;
         }
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', 'Roboto', sans-serif;
             line-height: 1.6;
-            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            background: linear-gradient(135deg, #e2e8f0 0%, #cbd5e1 100%);
             color: var(--text-primary);
             overflow-x: hidden;
         }
@@ -200,7 +200,7 @@
         /* Install Section */
         .install {
             padding: 4rem 0;
-            background: rgba(255, 255, 255, 0.02);
+            background: rgba(255, 255, 255, 0.5);
             border-top: 1px solid var(--border-color);
         }
 
@@ -367,7 +367,7 @@
         /* Features */
         .features {
             padding: 4rem 0;
-            background: rgba(255, 255, 255, 0.02);
+            background: rgba(255, 255, 255, 0.3);
             border-top: 1px solid var(--border-color);
         }
 
@@ -432,8 +432,9 @@
         /* Footer */
         .footer {
             padding: 4rem 0 2rem;
-            background: rgba(0, 0, 0, 0.3);
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
             border-top: 1px solid var(--border-color);
+            color: #ffffff;
         }
 
         .footer-content {
@@ -445,7 +446,7 @@
 
         .footer-section h4 {
             margin-bottom: 1rem;
-            color: var(--text-primary);
+            color: #ffffff;
         }
 
         .footer-section ul {
@@ -457,20 +458,20 @@
         }
 
         .footer-section a {
-            color: var(--text-secondary);
+            color: rgba(255, 255, 255, 0.8);
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
         .footer-section a:hover {
-            color: var(--primary-color);
+            color: #ffffff;
         }
 
         .footer-bottom {
-            border-top: 1px solid var(--border-color);
+            border-top: 1px solid rgba(255, 255, 255, 0.2);
             padding-top: 2rem;
             text-align: center;
-            color: var(--text-secondary);
+            color: rgba(255, 255, 255, 0.8);
         }
 
         /* Responsive */
